fix(utils): align control buttons when 430px < 100vw <= 540px

--- a/src/content_scripts/control_buttons.css
+++ b/src/content_scripts/control_buttons.css
@@ -79,3 +79,9 @@
   border-bottom: 1px solid rgba(var(--black), .13);
   content: '';
 }
+
+@media (max-width: 540px) {
+  .xkit-controls-row {
+    column-gap: 0;
+  }
+}
